ACTIN-31: Add targeted and other SOC treatments including molecular criteria